--- a/assignment-0/src/index.html
+++ b/assignment-0/src/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <title>My First App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Hello, World!</h1>
+<p>I am styled paragraph.</p>
 </body>
 </html>
