Styles with id, class and element added

--- a/assignment-0/src/index.html
+++ b/assignment-0/src/index.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <h1>Hello, World!</h1>
+
 <p>I am styled paragraph.</p>
+
+<div id="my-div">I am styled using id</div>
+
+<div class="my-class">I am styled using class.</div>
+<div class="my-class">I am styled using class.</div>
+
 </body>
 </html>
